<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteTakerActivity">

    <Button
        android:id="@+id/button_exit"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_moveBack"
        android:text="@string/button_exit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_newGroup" />

    <Button
        android:id="@+id/button_newGroup"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_moveForword"
        android:text="@string/button_newGroup"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_newText" />

    <Button
        android:id="@+id/button_group"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_moveForword"
        android:text="@string/button_groups"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/button_newText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_newText"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/button_moveForword"
        android:text="@string/button_newNote"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/button_newGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_group" />

</androidx.constraintlayout.widget.ConstraintLayout>